--- a/action.yml
+++ b/action.yml
@@ -1,38 +1,59 @@
-name: 'Amazon ECS "Deploy Task Definition" Action for GitHub Actions'
-description: 'Registers an Amazon ECS task definition, and deploys it to an ECS service'
+name: 'Amazon ECS "Deploy Task Definition" and "Notify to Slack" Action for GitHub Actions'
+description: "Registers an Amazon ECS task definition, and deploys it to an ECS service, and notify to slack"
 branding:
-  icon: 'cloud'
-  color: 'orange'
+    icon: "cloud"
+    color: "orange"
 inputs:
-  task-definition:
-    description: 'The path to the ECS task definition file to register'
-    required: true
-  service:
-    description: 'The name of the ECS service to deploy to. The action will only register the task definition if no service is given.'
-    required: false
-  cluster:
-    description: "The name of the ECS service's cluster.  Will default to the 'default' cluster"
-    required: false
-  wait-for-service-stability:
-    description: 'Whether to wait for the ECS service to reach stable state after deploying the new task definition. Valid value is "true". Will default to not waiting.'
-    required: false
-  wait-for-minutes:
-    description: 'How long to wait for the ECS service to reach stable state, in minutes (default: 30 minutes, max: 6 hours). For CodeDeploy deployments, any wait time configured in the CodeDeploy deployment group will be added to this value.'
-    required: false
-  codedeploy-appspec:
-    description: "The path to the AWS CodeDeploy AppSpec file, if the ECS service uses the CODE_DEPLOY deployment controller. Will default to 'appspec.yaml'."
-    required: false
-  codedeploy-application:
-    description: "The name of the AWS CodeDeploy application, if the ECS service uses the CODE_DEPLOY deployment controller. Will default to 'AppECS-{cluster}-{service}'."
-    required: false
-  codedeploy-deployment-group:
-    description: "The name of the AWS CodeDeploy deployment group, if the ECS service uses the CODE_DEPLOY deployment controller. Will default to 'DgpECS-{cluster}-{service}'."
-    required: false
+    task-definition:
+        description: "The path to the ECS task definition file to register"
+        required: true
+    service:
+        description: "The name of the ECS service to deploy to. The action will only register the task definition if no service is given."
+        required: false
+    cluster:
+        description: "The name of the ECS service's cluster.  Will default to the 'default' cluster"
+        required: false
+    wait-for-service-stability:
+        description: 'Whether to wait for the ECS service to reach stable state after deploying the new task definition. Valid value is "true". Will default to not waiting.'
+        required: false
+    wait-for-minutes:
+        description: "How long to wait for the ECS service to reach stable state, in minutes (default: 30 minutes, max: 6 hours). For CodeDeploy deployments, any wait time configured in the CodeDeploy deployment group will be added to this value."
+        required: false
+    codedeploy-appspec:
+        description: "The path to the AWS CodeDeploy AppSpec file, if the ECS service uses the CODE_DEPLOY deployment controller. Will default to 'appspec.yaml'."
+        required: false
+    codedeploy-application:
+        description: "The name of the AWS CodeDeploy application, if the ECS service uses the CODE_DEPLOY deployment controller. Will default to 'AppECS-{cluster}-{service}'."
+        required: false
+    codedeploy-deployment-group:
+        description: "The name of the AWS CodeDeploy deployment group, if the ECS service uses the CODE_DEPLOY deployment controller. Will default to 'DgpECS-{cluster}-{service}'."
+        required: false
+    slack-webhook-url:
+        description: "Webhook Url for slack notify."
+        required: false
+    slack-waiting-msg-blocks:
+        description: "The path to json file of slack message block for notify deployment is start."
+        required: false
+    slack-success-msg-blocks:
+        description: "The path to json file of slack message block for notify deployment is success."
+        required: false
+    slack-failure-msg-blocks:
+        description: "The path to json file of slack message block for notify deployment is failure."
+        required: false
+    slack-channel:
+        description: "The name of slack channel."
+        required: false
+    slack-display-text:
+        description: "Text message for slack notify popup display."
+        required: false
+    slack-default-blocks-language:
+        description: "Language of default blocks template. This is for default template user."
+        required: false
 outputs:
-  task-definition-arn:
-    description: 'The ARN of the registered ECS task definition'
-  codedeploy-deployment-id:
-    description: 'The deployment ID of the CodeDeploy deployment (if the ECS service uses the CODE_DEPLOY deployment controller'
+    task-definition-arn:
+        description: "The ARN of the registered ECS task definition"
+    codedeploy-deployment-id:
+        description: "The deployment ID of the CodeDeploy deployment (if the ECS service uses the CODE_DEPLOY deployment controller"
 runs:
-  using: 'node12'
-  main: 'dist/index.js'
+    using: "node12"
+    main: "dist/index.js"
