--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "aws-actions-amazon-ecs-deploy-task-definition",
-  "version": "1.3.10",
-  "description": "Registers an Amazon ECS task definition and deploys it to an ECS service.",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint **.js",
-    "package": "ncc build index.js -o dist",
-    "test": "eslint **.js && jest --coverage"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aws-actions/amazon-ecs-deploy-task-definition.git"
-  },
-  "keywords": [
-    "AWS",
-    "GitHub",
-    "Actions",
-    "JavaScript"
-  ],
-  "author": "AWS",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/aws-actions/amazon-ecs-deploy-task-definition/issues"
-  },
-  "homepage": "https://github.com/aws-actions/amazon-ecs-deploy-task-definition#readme",
-  "dependencies": {
-    "@actions/core": "^1.2.6",
-    "aws-sdk": "^2.774.0",
-    "axios": "^0.20.0",
-    "yaml": "^1.10.0"
-  },
-  "devDependencies": {
-    "@zeit/ncc": "^0.22.3",
-    "eslint": "^7.11.0",
-    "jest": "^26.6.0"
-  }
+    "name": "aws-actions-amazon-ecs-deploy-task-definition-with-slack",
+    "version": "1.0.0",
+    "description": "Registers an Amazon ECS task definition and deploys it to an ECS service with Slack Notify. Origin Repo is https://github.com/aws-actions/amazon-ecs-deploy-task-definition",
+    "main": "index.js",
+    "scripts": {
+        "lint": "eslint **.js",
+        "package": "ncc build index.js -o dist",
+        "test": "eslint **.js && jest --coverage"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/oktroco/amazon-ecs-deploy-task-definition-with-slack.git"
+    },
+    "keywords": [
+        "AWS",
+        "GitHub",
+        "Actions",
+        "JavaScript",
+        "Slack"
+    ],
+    "author": "OKTROCO",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/oktroco/amazon-ecs-deploy-task-definition-with-slack/issues"
+    },
+    "dependencies": {
+        "@actions/core": "^1.2.6",
+        "aws-sdk": "^2.774.0",
+        "axios": "^0.20.0",
+        "yaml": "^1.10.0"
+    },
+    "devDependencies": {
+        "@zeit/ncc": "^0.22.3",
+        "eslint": "^7.11.0",
+        "jest": "^26.6.0"
+    }
 }
